Fixed z-index on "added to cart" message

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -120,7 +120,7 @@ nav,
   overflow: hidden;
   margin-top: 5rem;
   background: rgba(57, 55, 72, 0.22);
-  z-index: 9998;
+  z-index: 9996;
   inset: 0;
 }
 
@@ -503,7 +503,7 @@ nav {
     text-align: center;
     text-transform: uppercase;
     background-color: rgb(248, 248, 249, 0.4);
-    z-index: 9997;
+    z-index: 9990;
     inset: 0;
 
     p {
